cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(leetcode-solutions LANGUAGES C CXX)
set(VERSION_MAJOR 1)
set(VERSION_MINOR 0)
set(VERSION_PATCH 0)
set(CMAKE_CXX_STANDARD 11)

option(PROFILER "Enable profiler build" OFF)
if(PROFILER)
  add_definitions(-pg)
endif(PROFILER)

if(UNIX AND NOT APPLE)
  set(LINUX TRUE)
endif()

option(SANITIZER "Enable sanitizer" OFF)
if(SANITIZER)
  add_definitions(-fsanitize=address)
  add_definitions(-fsanitize=signed-integer-overflow)
  if(LINUX)
    add_definitions(-fno-omit-frame-pointer)
    add_definitions(-Wno-format-security)
    add_definitions(-static-libasan)
  endif(LINUX)
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
endif(SANITIZER)

add_subdirectory(solutions)
